--- a/frontend/css/estilo_index_html.css
+++ b/frontend/css/estilo_index_html.css
@@ -161,6 +161,15 @@ nav button:hover {
     font-size: 16px;
 }
 
+#contenido-busqueda{
+    display: flex;
+    justify-content: space-around;
+}
+
+.div-contenido-busqueda{
+    width: 100%;
+}
+
 hr{
     width: 100%;
     height: 5px;
